--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Tale
 description:    "100 days of ML Code"
 baseurl:        ""
-url:            "https://https://devyohan.github.io/100_Days_of_ML_Code/"
+url:            "https://devyohan.github.io/100_Days_of_ML_Code/"
 
 # Author
 author:
