--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:          Tale
 description:    "100 days of ML Code"
-baseurl:        ""
+baseurl:        "100_Days_of_ML_Code/"
 url:            "https://devyohan.github.io/100_Days_of_ML_Code/"
 
 # Author
